fix prompt z-index

--- a/src/app/modules/discovery/search/search.component.ng.scss
+++ b/src/app/modules/discovery/search/search.component.ng.scss
@@ -31,7 +31,7 @@
     position: sticky !important;
     margin-top: 14px;
     margin-bottom: -6px;
-    z-index: 1; // appear above everything in the feed
+    @include z-index(body);
   }
 
   // *********************************
